web/themes/custom/union_marketing/scss/components/_sections.scss
.cu-section {
  clear: both;
  margin-bottom: var(--cu-component-margin-bottom, var(--cu-vr2));

  @include breakpoint(md) {
    margin-bottom: var(--cu-component-margin-bottom, var(--cu-vr3));
  }
}

.field--field-sections .cu-section-heading__link,
.paragraphs-previewer-html .cu-section-heading__link {
  order: 3;
}

figure.cu-media,
.cu-component--image,
.cu-component--video {
  margin: var(--cu-component-margin-bottom, var(--cu-vr2)) 0;

  @include breakpoint(md) {
    margin: var(--cu-component-margin-bottom, var(--cu-vr3)) 0;
  }
}

.cu-section--wide .cu-component--rich-text {
  max-width: var(--cu-max-width-section, 1060px);
  margin-left: auto;
  margin-right: auto;
}

.cu-component--rich-text {
  overflow: hidden; // TODO deal with effects on inner block element margins (e.g. blockquote)
}

// Clear floats from rich text media for adjacent components (e.g. paragraphs).
.cu-component--rich-text + .cu-component {
  clear: both;
}

.cu-section.paragraph--unpublished {
  display: none;
}

.paragraphs-previewer-html .cu-section.paragraph--unpublished {
  display: unset;
}

